<resources>
    <string name="app_name" translatable="false">Qur\'an</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="gps_settings_title" translatable="false">GPS settings</string>
    <string name="gps_settings_text" translatable="false">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok" translatable="false">Settings</string>
    <string name="settings_button_cancel" translatable="false">Cancel</string>
    <string name="msg_permission_not_granted_yet" translatable="false">Location access not available yet</string>
    <string name="msg_permission_granted" translatable="false">Location Access Granted</string>
    <string name="toast_permission_required" translatable="false">This app requires Access Location</string>
    <string name="your_location" translatable="false">Your Location: </string>
    <string name="unable_to_get_your_location" translatable="false">Unable to get your location</string>
    <string name="location_not_ready" translatable="false">Location not ready.</string>
    <string name="pls_enable_location" translatable="false">Please turn on Location</string>
    <string name="degree" translatable="false">°</string>
    <string name="using_last_location" translatable="false">using last location.</string>
    <string name="dialog_message_sensor_not_exist" translatable="false">Your device doesn\'t have the required sensors</string>
    <string name="dialog_title" translatable="false">Alert</string>
    <string name="footer_image">Footer Image</string>
    <string-array name="surat_names">
        <item>الفاتحة</item>
        <item>البقرة</item>
        <item>آل عمران</item>
        <item>النساء</item>
        <item>المائدة</item>
        <item>الأنعام</item>
        <item>الأعراف</item>
        <item>الأنفال</item>
        <item>التوبة</item>
        <item>يونس</item>
        <item>هود</item>
        <item>يوسف</item>
        <item>الرعد</item>
        <item>إبراهيم</item>
        <item>الحجر</item>
        <item>النحل</item>
        <item>الإسراء</item>
        <item>الكهف</item>
        <item>مريم</item>
        <item>طه</item>
        <item>الأنبياء</item>
        <item>الحج</item>
        <item>المؤمنون</item>
        <item>النور</item>
        <item>الفرقان</item>
        <item>الشعراء</item>
        <item>النمل</item>
        <item>القصص</item>
        <item>العنكبوت</item>
        <item>الروم</item>
        <item>لقمان</item>
        <item>السجدة</item>
        <item>الأحزاب</item>
        <item>سبأ</item>
        <item>فاطر</item>
        <item>يس</item>
        <item>الصافات</item>
        <item>ص</item>
        <item>الزمر</item>
        <item>غافر</item>
        <item>فصلت</item>
        <item>الشورى</item>
        <item>الزخرف</item>
        <item>الدخان</item>
        <item>الجاثية</item>
        <item>الأحقاف</item>
        <item>محمد</item>
        <item>الفتح</item>
        <item>الحجرات</item>
        <item>ق</item>
        <item>الذاريات</item>
        <item>الطور</item>
        <item>النجم</item>
        <item>القمر</item>
        <item>الرحمن</item>
        <item>الواقعة</item>
        <item>الحديد</item>
        <item>المجادلة</item>
        <item>الحشر</item>
        <item>الممتحنة</item>
        <item>الصف</item>
        <item>الجمعة</item>
        <item>المنافقون</item>
        <item>التغابن</item>
        <item>الطلاق</item>
        <item>التحريم</item>
        <item>الملك</item>
        <item>القلم</item>
        <item>الحاقة</item>
        <item>المعارج</item>
        <item>نوح</item>
        <item>الجن</item>
        <item>المزمل</item>
        <item>المدثر</item>
        <item>القيامة</item>
        <item>الإنسان</item>
        <item>المرسلات</item>
        <item>النبأ</item>
        <item>النازعات</item>
        <item>عبس</item>
        <item>التكوير</item>
        <item>الانفطار</item>
        <item>المطففين</item>
        <item>الانشقاق</item>
        <item>البروج</item>
        <item>الطارق</item>
        <item>الأعلى</item>
        <item>الغاشية</item>
        <item>الفجر</item>
        <item>البلد</item>
        <item>الشمس</item>
        <item>الليل</item>
        <item>الضحى</item>
        <item>الشرح</item>
        <item>التين</item>
        <item>العلق</item>
        <item>القدر</item>
        <item>البينة</item>
        <item>الزلزلة</item>
        <item>العاديات</item>
        <item>القارعة</item>
        <item>التكاثر</item>
        <item>العصر</item>
        <item>الهمزة</item>
        <item>الفيل</item>
        <item>قريش</item>
        <item>الماعون</item>
        <item>الكوثر</item>
        <item>الكافرون</item>
        <item>النصر</item>
        <item>المسد</item>
        <item>الإخلاص</item>
        <item>الفلق</item>
        <item>الناس</item>
    </string-array>
    <string-array name="surat_fr">
        <item>    Prologue (Al-Fatiha)</item>
        <item>La vache (Al-Baqarah)</item>
        <item>    La famille d\'Imran (Al-Imran)</item>
        <item> Les femmes (An-Nisa\').</item>
        <item>   La table servie (Al-Maidah)</item>
        <item>Les bestiaux (Al-Anam)</item>
        <item> Al-Araf</item>
        <item> Le butin (Al-Anfal)</item>
        <item>Le repentir (At-Tawbah)</item>
        <item>Jonas (Yunus)</item>
        <item> Hud</item>
        <item>Joseph (Yusuf)</item>
        <item>Le tonnerre (Ar-Raad)</item>
        <item> Abraham (Ibrahim)</item>
        <item>Al-Hijr</item>
        <item>Les abeilles (An-Nahl)</item>
        <item>Le voyage nocturne (Al-Isra)</item>
        <item>La caverne (Al-Kahf)</item>
        <item>Marie (Maryam)</item>
        <item>Ta-Ha</item>
        <item>Les prophètes (Al-Anbiya)</item>
        <item> Le pélerinage (Al-Hajj)</item>
        <item>Les croyants (Al-Muminune)</item>
        <item>La lumière (An-Nur)</item>
        <item>Le discernement (Al Furqane)</item>
        <item>  Les poètes (As-Shuaraa)</item>
        <item>Les fourmis (An-Naml)</item>
        <item> Le récit (Al-Qasas)  </item>
        <item>L\'araignée (Al-Ankabut)  </item>
        <item>Les romains (Ar-Rum)</item>
        <item>Luqman  </item>
        <item> La prosternation (As-Sajda) </item>
        <item>Les coalisés (Al-Ahzab)</item>
        <item>Saba   </item>
        <item>  Le Créateur (Fatir)  </item>
        <item>Ya-Sin </item>
        <item>Les rangés (As-Saffat)</item>
        <item> Sad  </item>
        <item>Les groupes (Az-Zumar)</item>
        <item> Le pardonneur (Gafir)</item>
        <item> Les versets détaillés (Fussilat)</item>
        <item>La consultation (Achoura)</item>
        <item> L\'ornement (Azzukhruf)</item>
        <item>La fumée (Ad-Dukhan)</item>
        <item>L\'agenouillée (Al-Jathya)</item>
        <item>Al-Ahqaf</item>
        <item>Muhammad</item>
        <item>La victoire éclatante (Al-Fath)</item>
        <item>Les appartements (Al-Hujurat)</item>
        <item>Qaf</item>
        <item>Qui éparpillent (Ad-Dariyat)</item>
        <item>At-Tur</item>
        <item>L\'étoile (An-Najm)</item>
        <item> La lune (Al-Qamar)</item>
        <item>Le Tout Miséricordieux (Ar-Rahman) </item>
        <item>L\'événement (Al-Waqi\'a) </item>
        <item>Le fer (Al-Hadid)</item>
        <item>La discussion (Al-Mujadalah) </item>
        <item>L\'exode (Al-Hasr) </item>
        <item>L\'éprouvée (Al-Mumtahanah)</item>

        <item>Le rang (As-Saff)</item>
        <item>Le vendredi (Al-Jumua).</item>
        <item>Les hypocrites (Al-Munafiqun)</item>
        <item> La grande perte (At-Tagabun)</item>
        <item>Le divorce (At-Talaq)</item>
        <item>L\'interdiction (At-Tahrim)</item>
        <item>La royauté (Al-Mulk)</item>
        <item>La plume (Al-Qalam)</item>
        <item>Celle qui montre la vérité (Al- Haqqah) </item>
        <item>Les voies d\'ascension (Al- Maarij) </item>
        <item> Noé (Nuh) </item>
        <item>Les djinns (Al-Jinn)</item>
        <item> L\'enveloppé (Al-Muzzamil)</item>
        <item>Le revêtu d\'un manteau (Al-Muddattir) </item>

        <item>La résurrection (Al-Qiyamah)</item>

        <item>L\'homme (Al-Insan)</item>
        <item>Les envoyés (Al-Mursalate)</item>
        <item>La nouvelle (An-Naba)</item>
        <item>Les anges qui arrachent les âmes (An-Naziate)</item>
        <item>Il s\'est renfrogné (Abasa)</item>

        <item> L\'obscurcissement (At-Takwir)</item>

        <item> La rupture (Al-Infitar)</item>
        <item>Les fraudeurs (Al-Mutaffifune)</item>
        <item>La déchirure (Al-Insiqaq)</item>
        <item>Les constellations (Al-Buruj)</item>
        <item>L\'astre nocturne (At-Tariq)</item>
        <item>Le Très-Haut (Al-Ala)</item>
        <item>L\'enveloppante (Al-Gasiyah)</item>
        <item>L\'aube (Al-Fajr)</item>
        <item>La cité (Al-Balad)</item>
        <item>Le soleil (Ach-Chams)</item>
        <item>La nuit (Al-Layl)</item>
        <item>Le jour montant (Ad-Duha)</item>
        <item>L\'ouverture (As-Sarh)</item>
        <item>Le figuier (At-Tin)</item>
        <item>L\'adhérence (Al-Alaq)</item>
        <item>La Destinée (Al-Qadr)</item>
        <item>La preuve (Al-Bayyinah)</item>
        <item> La secousse (Az-Zalzalah)</item>
        <item>Les coursiers (Al-Adiyate)</item>
        <item>Le fracas (Al-Qariah)</item>
        <item>La course aux richesses (At-Takatur)</item>
        <item>Le temps (Al-Asr)</item>
        <item> Les calomniateurs (Al-Humazah)</item>
        <item>L\'éléphant (Al-Fil) </item>
        <item>Qoraïsh</item>
        <item>L\'ustensile (Al-Maun)</item>
        <item>L\'abondance (Al-Kawtar) </item>
        <item>Les infidèles (Al-Kafirune)</item>

        <item>Les secours (An-Nasr)</item>
        <item>Les fibres (Al-Masad)</item>
        <item> Le monothéisme pur (Al-Ihlas) </item>
        <item>L\'aube naissante (Al-Falaq)</item>
        <item> Les hommes (An-Nas) </item>
    </string-array>
    <string-array name="cityName">
        <item>Meccan| </item>
        <item>Medinan |</item>
    </string-array>
    <string name="prayer_time">Prayer</string>
    <string name="qur_an">Qur\'an</string>
    <string name="hijri">Hijri</string>
    <string name="dou_an">Dou\'an</string>
    <string name="play_murattal">Play Murattal</string>
    <string name="copy_verse">Copy Verse</string>
    <string name="share">Share</string>
</resources>