<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
   android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/cardColor"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/play"
    android:padding="5dp"
    android:orientation="horizontal">
  <ImageView

      android:layout_width="wrap_content"
      android:src="@drawable/ic_play_"
      android:layout_height="wrap_content"

      />
    <TextView
        android:layout_width="wrap_content"
        style="@style/peace"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:text="@string/play_murattal"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/share"
        android:padding="5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_share_black_24dp"
            android:layout_height="wrap_content"

            />
        <TextView
            android:layout_width="wrap_content"
            style="@style/peace"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/share"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/copy"
        android:padding="5dp"
        android:orientation="horizontal">
        <ImageView

            android:layout_width="wrap_content"
            android:src="@drawable/ic_content_copy"
            android:layout_height="wrap_content"

            />
        <TextView
            android:layout_width="wrap_content"
            style="@style/peace"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/copy_verse"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookmark"
        android:padding="5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_folder_love"
            android:layout_height="wrap_content"

            />
        <TextView
            android:layout_width="wrap_content"
            style="@style/peace"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="Add to Bookmark"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastread"
        android:padding="5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_height="wrap_content"

            />
        <TextView
            android:layout_width="wrap_content"
            style="@style/peace"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="Make as Last Read"/>

    </LinearLayout>
</LinearLayout>