<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backmain"
    tools:context=".Activity.Main">

    <include
        android:id="@+id/tablayout"
        layout="@layout/tablayout" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="100dp"
        android:layout_height="100dp"


        android:src="@drawable/allah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:padding="40dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10">

        <ImageView
            android:id="@+id/imageView4"

            android:onClick="GoCoran"
            android:src="@drawable/coran"
            style="@style/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/peace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/qur_an"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView5"

            android:src="@drawable/fashion"
            android:onClick="GoCoran"
            style="@style/img"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/peace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Tasbih"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView6"
            style="@style/img"
            android:src="@drawable/square"
            android:onClick="GoCoran"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/peace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/prayer_time"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView7"

            android:src="@drawable/calen"
            android:onClick="GoCoran"
            style="@style/img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            style="@style/peace"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hijri"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView8"

            android:onClick="GoCoran"
            style="@style/img"
            android:src="@drawable/monuments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            style="@style/peace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="GoCoran"
            android:text="Qibla"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView9"
            android:src="@drawable/douan"
            android:onClick="GoCoran"
            style="@style/img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            style="@style/peace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dou_an"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>